# memory-process-optimizer

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  os_interface.h  victim.py
src/platform/: mac_impl.c  win_impl.c
